--- a/.github/workflows/stale-caller.yaml
+++ b/.github/workflows/stale-caller.yaml
@@ -3,6 +3,7 @@ name: 'Stale Issues and PRs Caller'
 on:
   schedule:
     - cron: '30 1 * * *'
+  workflow_dispatch:
 
 permissions:
   issues: write
