ci: change release frequency

--- a/.github/workflows/release-drafter-caller.yaml
+++ b/.github/workflows/release-drafter-caller.yaml
@@ -7,9 +7,6 @@ on:
   # pull_request event is required only for autolabeler
   pull_request:
     # Only following types (opened, reopened, synchronize) are handled by the action, but one can default to all as well
-  # pull_request_target event is required for autolabeler to support PRs from forks
-  # pull_request_target:
-  #   types: [opened, reopened, synchronize]
 
 permissions:
   contents: write
@@ -21,7 +18,7 @@ jobs:
     with:
       # specify config name to use, relative to .github/.
       config-path: release-drafter.yml
-      publish-release: true
+      publish-release: false
       disable-autolabeler: false
     secrets:
       caller_token: ${{ secrets.GITHUB_TOKEN }}
