ci: update workflows to standard template

--- a/.github/workflows/stale-caller.yaml
+++ b/.github/workflows/stale-caller.yaml
@@ -2,6 +2,7 @@ name: 'Stale Issues and PRs Caller'
 
 on:
   schedule:
+    # run stale daily at 01:30
     - cron: '30 1 * * *'
   workflow_dispatch:
 
